--- a/css/main.css
+++ b/css/main.css
@@ -32,6 +32,10 @@ height: 100vh;
 	color: #F03757;
 }
 
+label{
+	margin-top: 3rem;
+}
+
 #sign-in input{
 	background-color: rgba(255, 255, 255, 0.2);
 	border: none;
@@ -120,6 +124,7 @@ height: 100vh;
 	margin: 0 5px;
 }
 .galeria{
+
 	width: 100%;
 	margin: 0;
 	padding: 0;
