--- a/css/main.css
+++ b/css/main.css
@@ -81,15 +81,14 @@ height: 100vh;
 }
 #registrate{
 	width: 100%;
+	position: absolute;
 	bottom: 0;
 	border-top: 1px solid #fff;
 	padding: 20px;
 	color: #fff;
-	margin-top: 55rem;
 }
 #registrate p{
 	margin: 0;
-	padding-top: 10rem;
 }
 #registrate a{
 	color: #fff;
@@ -97,10 +96,6 @@ height: 100vh;
 }
 #registrate a:hover{
 	color: #F03757;
-}
-
-.regis{
-	padding-top: 10rem;
 }
 
 /*ESTILOS ERROR INPUT JS*/
